<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/setting">
        <ListPreference
            android:defaultValue="10"
            android:entries="@array/amount_values"
            android:entryValues="@array/amount_values"
            android:key="amount"
            android:summary="%s"
            android:title="@string/amount" />

        <ListPreference
            android:defaultValue=""
            android:entries="@array/difficulty_entries"
            android:entryValues="@array/difficulty_values"
            android:key="difficulty"
            android:summary="%s"
            android:title="@string/difficulty" />

        <ListPreference
            android:defaultValue=""
            android:entries="@array/category_entries"
            android:entryValues="@array/category_values"
            android:key="category"
            android:summary="%s"
            android:title="@string/category" />

        <ListPreference
            android:defaultValue=""
            android:entries="@array/type_entries"
            android:entryValues="@array/type_values"
            android:key="type"
            android:summary="%s"
            android:title="@string/type" />
    </PreferenceCategory>

</PreferenceScreen>