<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_view"
    tools:context=".main.view.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="160dp"
        android:layout_height="180dp"
        android:layout_marginTop="30sp"
        android:src="@drawable/ic_profile_image"
        app:civ_border_color="@color/black"
        app:civ_border_width="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/profile_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/circleImageView"
        app:layout_constraintStart_toStartOf="@+id/circleImageView"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/play_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70sp"
        android:layout_marginTop="25sp"
        android:background="@drawable/ic_button_background"
        android:text="@string/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_textView" />

    <TextView
        android:id="@+id/total_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/total_question"
        android:textColor="@color/black"
        android:layout_marginStart="20sp"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/play_button"
        app:layout_constraintTop_toBottomOf="@+id/play_button" />

    <TextView
        android:id="@+id/total_question_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40sp"
        android:layout_marginTop="40dp"
        android:text="70"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/incorrectly_answered_questions"
        app:layout_constraintTop_toBottomOf="@+id/play_button" />

    <TextView
        android:id="@+id/multiple_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/multiple_question"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/total_question"
        app:layout_constraintTop_toBottomOf="@+id/total_question" />

    <TextView
        android:id="@+id/multiple_question_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40sp"
        android:layout_marginTop="15dp"
        android:text="40"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/incorrectly_answered_questions"
        app:layout_constraintTop_toBottomOf="@+id/total_question" />

    <TextView
        android:id="@+id/boolean_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/boolean_questions"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/multiple_question"
        app:layout_constraintTop_toBottomOf="@+id/multiple_question" />

    <TextView
        android:id="@+id/boolean_question_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40sp"
        android:layout_marginTop="15dp"
        android:text="30"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/incorrectly_answered_questions"
        app:layout_constraintTop_toBottomOf="@+id/multiple_question" />

    <TextView
        android:id="@+id/correctly_answered_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/correct_questions"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/boolean_questions"
        app:layout_constraintTop_toBottomOf="@+id/boolean_questions" />

    <TextView
        android:id="@+id/correctly_question_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40sp"
        android:layout_marginTop="15dp"
        android:text="50"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/incorrectly_answered_questions"
        app:layout_constraintTop_toBottomOf="@+id/boolean_questions" />

    <TextView
        android:id="@+id/incorrectly_answered_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/incorrectly_questions"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/correctly_answered_questions"
        app:layout_constraintTop_toBottomOf="@+id/correctly_answered_questions" />

    <TextView
        android:id="@+id/incorrectly_question_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40sp"
        android:layout_marginTop="15dp"
        android:text="20"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/incorrectly_answered_questions"
        app:layout_constraintTop_toBottomOf="@+id/correctly_answered_questions" />


    <TextView
        android:id="@+id/final_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/final_score"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/incorrectly_answered_questions"
        app:layout_constraintTop_toBottomOf="@+id/incorrectly_answered_questions" />

    <TextView
        android:id="@+id/final_score_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40sp"
        android:layout_marginTop="15dp"
        android:text="80"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/incorrectly_answered_questions"
        app:layout_constraintTop_toBottomOf="@+id/incorrectly_answered_questions" />

</androidx.constraintlayout.widget.ConstraintLayout>